# belajarpythonbot

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  samconfig.toml  template.yaml
.github/workflows/: main.yml
src/: app.py  db_operation.py  errors.py  helper.py  quiz.py  quiz_dict.py  quiz_worker.py  telegram_service.py  utils.py
src/handlers/: api_handler.py  quiz_worker.py
src/services/: quiz_dict.py  quiz_service.py
tests/: requirements.txt
tests/unit/: test_authorization.py  test_env.py  test_errors.py  test_handler.py  test_helper.py  test_quiz.py  test_simplified_architecture.py
tests/unit/fixtures/: telegram_callback_query_body.py  telegram_text_body.py
